changed async fn

--- a/async/async.css
+++ b/async/async.css
@@ -6,6 +6,9 @@
     display: block;
 }
 
-/* .loading-text.text__visible {
-  display: block; 
-} */
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
